# parallel_5_threads

./: CMakeLists.txt  main.cpp
lib/: BinarySemaphore.cpp  BinarySemaphore.h  IntegerChannel.cpp  IntegerChannel.h  IntegerSemaphore.cpp  IntegerSemaphore.h
processes/: bakery.h  burger_joint.h  farm.h  market.h  meat_processing_plant.h  warehouse.h
